# sp1-poc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Overview.md  README.md  Tokenomics.md  docker-compose.yaml  package-lock.json
contracts/: .gitignore  .solhint.json  cockpit-accounts.json  foundry.toml  index.ts  package-lock.json  package.json  remappings.txt
contracts/deploy-out/: 1.json  8453.json
contracts/script/bridge/: BridgeScript.s.sol
contracts/script/util/: AddressReader.s.sol  JsonDeploymentHandler.sol  StringUtil.sol
contracts/src/bridge/: Bridge.sol  BridgeStorage.sol  BridgeTypes.sol  IBridge.sol  IBridgeTypes.sol
contracts/src/libs/: ArrayContainsLib.sol  LocalExitTreeLib.sol
contracts/src/stake/: IStakeManager.sol  IStakeManagerTypes.sol  StakeManager.sol  StakeManagerStorage.sol  StakeManagerTypes.sol
contracts/src/test/: BridgeToken.sol
contracts/src/validator/: IValidatorManager.sol  IValidatorTypes.sol  ValidatorManager.sol  ValidatorManagerStorage.sol
contracts/src/validators/: IValidatorGovernance.sol  IValidatorManager.sol  IValidatorTypes.sol  ValidatorManager.sol  ValidatorManagerStorage.sol
contracts/test/base/: BridgeBase.t.sol  StakeManagerBase.t.sol  ValidatorManagerBase.t.sol
contracts/test/data/: bls.json
contracts/test/fuzz/: LocalExitTreeFuzz.t.sol  StakeManagerFuzz.t.sol
contracts/test/unit/: Bridge.t.sol  LocalExitTree.t.sol  StakeManager.t.sol  ValidatorManager.t.sol
crates/bls-test-utils/: Cargo.toml  bls_test_data.json  readme.md
crates/bls-test-utils/src/: main.rs
crates/bridge-lib/: Cargo.toml
crates/bridge-program/: Cargo.toml
crates/bridge-program/src/: main.rs
crates/bridge-script/: Cargo.toml  build.rs
crates/bridge-validator/: Cargo.toml
crates/bridge-validator-evm/: Cargo.toml
crates/chain-manager/: Cargo.toml
crates/chain-manager/src/: api.rs
crates/node-manager/: Cargo.toml
crates/validator-utils/: Cargo.toml
indexer/: Dockerfile  config.yaml  docker-compose.yaml  envio-entrypoint.sh  package.json  schema.graphql
indexer/src/: EventHandlers.ts
indexer/test/: test.ts
