[workspace]
members = [
  "crates/bridge-lib",
  "crates/bridge-program",
  "crates/bridge-script",
  "crates/bridge-validator-evm",
  "crates/bls-test-utils",
  "crates/node-manager",
  "crates/chain-manager",
  "crates/validator-utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["brianspha"]
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
eyre = { version = "0.6" }
tracing = { version = "0.1.40" }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = { version = "1.0.94", features = ["alloc"] }
serde = { version = "=1.0.226", features = ["derive"] }
reqwest = { version = "0.12.15" }
url = { version = "2.3" }
hex-literal = { version = "0.4.1" }
bincode = { version = "1.3.3" }
dotenv = { version = "0.15.0" }
thiserror = { version = "2.0.12" }
futures = { version = "0.3.31" }
recall_merkle_tree_rs = { version = "0.1.0" }

# Database dependencies
mongodb = { version = "3.2.4", features = [
  "sync",
  "rustls-tls",
  "compat-3-0-0",
] }

# SP1 dependencies
sp1-sdk = { version = "5.0.0" }
sp1-zkvm = { version = "5.0.0" }
sp1-build = { version = "5.0.0" }

# Alloy dependencies
alloy = { version = "1.0.36", features = ["full", "node-bindings"] }

# misc
clap = { version = "4.5.41", features = ["derive", "env"] }
hex = { version = "0.4.3", features = ["alloc"] }
gql_client = { version = "1.0.8" }
sha3 = { version = "0.11.0-rc.0" }
sylow = { version = "0.1.1" }
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
sha2 = { version = "0.11.0-pre.4" }
crypto-bigint = { version = "0.6.1" }
dashmap = { version = "6.1.0" }
serial_test = { version = "3.2.0" }

# crates
bridge-lib = { path = "crates/bridge-lib" }
bridge-program = { path = "crates/bridge-program" }
bridge-script = { path = "crates/bridge-script" }
jsonrpsee = { version = "0.26.0", features = ["full"] }
jsonrpsee-core = { version = "0.26.0" }
async-trait = { version = "0.1.88" }


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
