[package]
name = "bls-test-utils"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true, features = ["full"] }
hex = { workspace = true }
sylow = { workspace = true }
crypto-bigint = { workspace = true }
sha3 = { workspace = true }
