[package]
name = "bridge-lib"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[features]
std = [
  "alloy-sol-types/std",
  "alloy-primitives/std",
  "serde/std",
  "serde_json/std",
]

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = [
  "alloc",
] }
gql_client = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
