[package]
name = "bridge-program"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]
sp1-zkvm = { workspace = true, default-features = true }
alloy = { workspace = true, features = ["full"] }
serde = { workspace = true }
