[package]
name = "bridge-script"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[[bin]]
name = "bridge"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { workspace = true,default-features = false }
alloy-sol-types = { workspace = true ,default-features = false}
alloy-primitives = { workspace = true ,default-features = false}
serde = { workspace = true,default-features = false }
clap = { workspace = true }
dotenv = { workspace = true ,default-features = false}
hex = { workspace = true ,default-features = false}
eyre = { workspace = true,default-features = false }
tokio = { workspace = true ,default-features = false}
serde_json = { workspace = true ,default-features = false}


[build-dependencies]
sp1-build = { workspace = true }
