[package]
name = "bridge-script"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[[bin]]
name = "bridge"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
alloy-sol-macro = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false }
clap = { workspace = true }
dotenv = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
eyre = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
gql_client = { workspace = true }
mongodb = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "compat-3-0-0",
] }

recall_merkle_tree_rs = { workspace = true, default-features = false }
[build-dependencies]
sp1-build = { workspace = true }
