[package]
name = "bridge-script"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[[bin]]
name = "bridge"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { workspace = true }
alloy = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
gql_client = { workspace = true }
mongodb = { workspace = true, features = ["rustls-tls", "compat-3-0-0"] }

recall_merkle_tree_rs = { workspace = true }
[build-dependencies]
sp1-build = { workspace = true }
