[package]
name = "bridge-validator"
edition.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
serde = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
